Bug 171747 - Dimension Line dialog: preview does not reflect any checkbox settings
Summary: Dimension Line dialog: preview does not reflect any checkbox settings
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.8.0 target:26.2.4
Keywords: needUITest
Depends on:
Blocks: Shapes-Line
  Show dependency treegraph
 
Reported: 2026-04-14 07:00 UTC by Andreas Heinisch
Modified: 2026-04-22 01:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2026-04-14 07:00:42 UTC
Description:
In the Dimension Line dialog, the preview does not update when changing any of the available checkbox options (e.g., AutoVertical, AutoHorizontal, Parallel to line, Show measurement units).

Steps to Reproduce:
1. Open Draw
2. In the left toolbar, open the "Lines and Arrows" panel
3. Choose "Dimension Line"
4. Draw any dimension line in the workspace
5. Select the inserted dimension line
6. Right-click the object and choose "Dimensions..." from the context menu
7. Toggle any of the checkbox options

Actual Results:
The preview does not change when toggling any of the checkbox options.

Expected Results:
The preview should update dynamically to reflect the current checkbox settings.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: cb6edc8aaefcb20b0e0f98a55111a43a1d63578f
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 Andreas Heinisch 2026-04-16 21:09:29 UTC
Could not figure out how to setup the ui test for the preview since the controls are drawn directly.
Comment 2 Commit Notification 2026-04-17 01:17:35 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64f03d9fa140ab806bfe0c8a7b401ab1eef780ad

tdf#171747 - Fix checkbox handling to ensure preview updates correctly

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2026-04-18 05:31:10 UTC
Andreas, I am testing this commit. All the checkboxes are working properly. Thanks.

Verified with
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 5da5a96ecf0c927f16286414a1e832af25ba5feb
CPU threads: 16; OS: Linux 6.17; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Observation: one element from page does NOT work as specified: Decimal places. 
It allows to increase from 2 to more than that, but it will remain in the preview as 2 allways for bigger decimal values. Working well for 0 and 1 decimal. But maybe this was already reported somewhere else. I tested with gtk3 and gen, it is the same.
Comment 4 Andreas Heinisch 2026-04-18 08:11:19 UTC
Thank you for the test! The decimal places problem is reported and addressed in 138414.
Comment 5 Commit Notification 2026-04-22 01:50:02 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/02faddf5dd2b7d500a35f616b8d1f9276350a9c8

tdf#171747 - Fix checkbox handling to ensure preview updates correctly

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.