tdf#171747 - Fix checkbox handling to ensure preview updates correctly

In the dimension lines tab page, fix checkbox handling to ensure preview
updates correctly.

Change-Id: I036f3d27136f5885478dc572128f35786a90745f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203686
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins
(cherry picked from commit 64f03d9fa140ab806bfe0c8a7b401ab1eef780ad)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/204043
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>